--- a/about-us.html
+++ b/about-us.html
@@ -97,11 +97,10 @@
                 <div class="rr-header__logo">
                   <a href="index.html">
                     <div class="logo">
-                      <h1>LOGO</h1>
-                      <!-- <img
-                        src="assets/img/logo/logo-white.svg"
+                     <img
+                        src="assets/img/logo/ps-logo.svg"
                         alt="logo not found"
-                      /> -->
+                      />
                     </div>
                   </a>
                 </div>
@@ -110,7 +109,7 @@
                   <div class="main-menu">
                     <nav id="mobile-menu">
                       <ul>
-                        <li><a href="index-2.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About us</a></li>
                         <li><a href="service.html">Services</a></li>
 
@@ -199,7 +198,7 @@
                                 <h3 class="breadcrumb-section__title">About Power Sync</h3>
                                 <ul class="breadcrumb-section__page">
                                     <li><a href="index.html">Home </a></li>
-                                    <li>/ About Stravise</li>
+                                    <li>/ About Power Sync</li>
                                 </ul>
                             </div>
                         </div>
@@ -242,7 +241,7 @@
                 </section>
 
                 <!-- counter-section -->
-                <section class="counter-section-3__area section-space-bottom fade-wrapper">
+                <!-- <section class="counter-section-3__area section-space-bottom fade-wrapper">
                     <div class="container">
                         <div class="counter-section-3__wrapper mb-minus-40">
                             <div class="counter-section-3__item mb-40 fade-top">
@@ -263,7 +262,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <!-- service-section -->
                 <section class="service-section-2__area fix fade-wrapper">
@@ -287,7 +286,7 @@
                                                 business</h3>
                                             <p class="text_white_7 mt-20 fade-top">We envision a future where every
                                                 agency operates with
-                                                unparalleled efficiency and effectiveness. Through Stravise
+                                                unparalleled efficiency and effectiveness. Through Power Sync
                                                 innovative technology and user-centric design, Terix aims to set the</p>
                                         </div>
                                     </div>
@@ -481,7 +480,7 @@
                             <div class="col-lg-6 ">
                                 <div class="about-section-6__content">
                                     <div class="section-heading__wrap">
-                                        <span class="section__subtitle rr-title-anim mb-15">Why Stravise</span>
+                                        <span class="section__subtitle rr-title-anim mb-15">Why Power Sync</span>
                                         <h3 class="section__title rr-title-anim">We make most creative <br> digital
                                             solutions</h3>
                                     </div>
@@ -839,13 +838,12 @@
                 <div class="row mb-minus-50">
                   <div class="col-lg-4 col-md-6">
                     <div class="footer-section-3__widget widget-col_1 mb-50">
-                      <div class="footer-section-3__logo">
+                     <div class="footer-section-4__logo">
                         <a href="index.html">
-                          <h1>LOGO</h1>
-                          <!-- <img
-                            src="assets/img/logo/logo-white.svg"
+                          <img
+                            src="assets/img/logo/ps-logo.svg"
                             alt="logo not found"
-                        /> -->
+                        />
                         </a>
                       </div>
                       <p class="footer-section-3__dec text_white_7">
