--- a/contact.html
+++ b/contact.html
@@ -97,11 +97,10 @@
                 <div class="rr-header__logo">
                   <a href="index.html">
                     <div class="logo">
-                      <h1>LOGO</h1>
-                      <!-- <img
-                        src="assets/img/logo/logo-white.svg"
+                       <img
+                        src="assets/img/logo/ps-logo.svg"
                         alt="logo not found"
-                      /> -->
+                      />
                     </div>
                   </a>
                 </div>
@@ -110,7 +109,7 @@
                   <div class="main-menu">
                     <nav id="mobile-menu">
                       <ul>
-                        <li><a href="index-2.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About us</a></li>
                         <li><a href="service.html">Services</a></li>
 
@@ -233,9 +232,9 @@
                                                 </span>
                                             </div>
                                             <div class="contact-page__address-text">
-                                                <h4>United States (New York)</h4>
-                                                <a href="https://maps.app.goo.gl/cToDWqDiSRKZLWf49" target="_blank">1350
-                                                    Lexington Avenue, 7th Floor New York, NY 10028, USA</a>
+                                                <h4>United Kingdom</h4>
+                                                <!-- <a href="https://maps.app.goo.gl/cToDWqDiSRKZLWf49" target="_blank">1350
+                                                    Lexington Avenue, 7th Floor New York, NY 10028, USA</a> -->
                                             </div>
                                         </div>
                                         <div class="contact-page__address-item fade-top">
@@ -259,8 +258,8 @@
                                             </div>
                                             <div class="contact-page__address-text">
                                                 <h4>Contact</h4>
-                                                <a href="tel:+112233555">+11 22 33 555</a>
-                                                <a href="mailto:needhelp@gmail.com">needhelp@gmail.com</a>
+                                                <a href="tel:447405229008">+44 7405 229008</a>
+                                                <!-- <a href="mailto:needhelp@gmail.com">needhelp@gmail.com</a> -->
                                             </div>
                                         </div>
                                         <div class="contact-page__address-item fade-top">
@@ -289,8 +288,8 @@
                                             </div>
                                             <div class="contact-page__address-text">
                                                 <h4>Email Address</h4>
-                                                <a href="mailto:stravisecareers@gmail.com">stravisecareers@gmail.com</a>
-                                                <a href="mailto:needhelp@gmail.com">needhelp@gmail.com</a>
+                                                <a href="mailto:stravisecareers@gmail.com">hello@powersyncsolution.co.uk</a>
+                                                <!-- <a href="mailto:needhelp@gmail.com">needhelp@gmail.com</a> -->
                                             </div>
                                         </div>
                                     </div>
@@ -349,7 +348,7 @@
                     </div>
                 </section>
                 <!-- our-office-4 -->
-                <section class="our-office-4__area fix fade-wrapper">
+                <!-- <section class="our-office-4__area fix fade-wrapper">
                     <div class="our-office-4__wrapper" data-background="assets/img/shapes/our-office-4_bg-shape.png">
                         <div class="container">
                             <div class="row gx-0 align-items-center">
@@ -425,17 +424,17 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <!-- contact-location -->
-                <div class="contact-location__area section-space-bottom">
+                <!-- <div class="contact-location__area section-space-bottom">
                     <div class="contact-location__map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58003.562504147856!2d-0.19966983113886838!3d51.496449436747206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604b900d26973%3A0x4291f3172409ea92!2slastminute.com%20London%20Eye!5e0!3m2!1sen!2sbd!4v1750486847087!5m2!1sen!2sbd"
                             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- cta -->
                 <div class="cta-3__wrap">
@@ -444,7 +443,7 @@
                             <p>Saturday - Thursday : 8:30 am - 10:30 pm</p>
                         </div>
                         <div class="cta-3__right">
-                            <a href="tel:132456788">Call for appointment <i class="fa-light fa-angle-right"></i></a>
+                            <a href="tel:447405229008">Call for appointment <i class="fa-light fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -458,13 +457,12 @@
                 <div class="row mb-minus-50">
                   <div class="col-lg-4 col-md-6">
                     <div class="footer-section-3__widget widget-col_1 mb-50">
-                      <div class="footer-section-3__logo">
+                      <div class="footer-section-4__logo">
                         <a href="index.html">
-                          <h1>LOGO</h1>
-                          <!-- <img
-                            src="assets/img/logo/logo-white.svg"
+                          <img
+                            src="assets/img/logo/ps-logo.svg"
                             alt="logo not found"
-                        /> -->
+                        />
                         </a>
                       </div>
                       <p class="footer-section-3__dec text_white_7">
