--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                 <div class="rr-header__logo">
                   <a href="index.html">
                     <div class="logo">
-                      <h1>LOGO</h1>
-                      <!-- <img
-                        src="assets/img/logo/logo-white.svg"
+                     
+                      <img
+                        src="assets/img/logo/ps-logo.svg"
                         alt="logo not found"
-                      /> -->
+                      />
                     </div>
                   </a>
                 </div>
@@ -136,7 +136,7 @@
                   <div class="main-menu">
                     <nav id="mobile-menu">
                       <ul>
-                        <li><a href="index-2.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About us</a></li>
                         <li><a href="service.html">Services</a></li>
 
@@ -307,20 +307,20 @@
             <div class="container">
               <div class="counter-section-3__wrapper mb-minus-40">
                 <div class="counter-section-3__item mb-40 fade-top">
-                  <h2><span class="odometer" data-count="22">0</span></h2>
+                  <h2><span class="odometer" data-count="8">0</span></h2>
                   <p>Years Field Experience</p>
                 </div>
                 <div class="counter-section-3__item mb-40 fade-top">
-                  <h2><span class="odometer" data-count="1942">0</span></h2>
+                  <h2><span class="odometer" data-count="2016">0</span></h2>
                   <p>Year Established on</p>
                 </div>
                 <div class="counter-section-3__item mb-40 fade-top">
-                  <h2><span class="odometer" data-count="746">0</span></h2>
-                  <p>Completed Projects</p>
+                  <h2><span class="odometer" data-count="120">0</span></h2>
+                  <p>Clients Served</p>
                 </div>
                 <div class="counter-section-3__item mb-40 fade-top">
-                  <h2><span class="odometer" data-count="569">0</span></h2>
-                  <p>Our Trusted Partners</p>
+                  <h2><span class="odometer" data-count="35">0</span></h2>
+                  <p>Industry Partnerships</p>
                 </div>
               </div>
             </div>
@@ -627,7 +627,7 @@
                   ><span></span> HOW WE WORKS</span
                 >
                 <h3 class="section__title rr-title-anim">
-                  We’re Stravise Based on <br />
+                  We’re Power Sync Based on <br />
                   Consultancy
                 </h3>
               </div>
@@ -1045,8 +1045,8 @@
                                                             every transition, to create experiences</p>
                                                         <div class="testimonial-section-3__author">
                                                             <div class="testimonial-section-3__author__thumb">
-                                                                <img src="assets/img/testimonial/author-3_01.png"
-                                                                    alt="image not found">
+                                                                <!-- <img src="assets/img/testimonial/author-3_01.png"
+                                                                    alt="image not found"> -->
                                                                 <div class="icon">
                                                                     <img src="assets/img/icon/testi-3-icon_01.svg"
                                                                         alt="icon not found">
@@ -1062,8 +1062,8 @@
                                                 <div class="swiper-slide">
                                                     <div class="testimonial-section-3__item">
                                                         <div class="testimonial-section-3__quote">
-                                                            <img src="assets/img/icon/testi-3-quote-01.svg"
-                                                                alt="icon not found">
+                                                            <!-- <img src="assets/img/icon/testi-3-quote-01.svg"
+                                                                alt="icon not found"> -->
                                                         </div>
                                                         <p class="testimonial-section-3__dec">From the moment I landed
                                                             on the page, everything just made sense. It’s obvious that
@@ -1071,8 +1071,8 @@
                                                             and usability at every step.</p>
                                                         <div class="testimonial-section-3__author">
                                                             <div class="testimonial-section-3__author__thumb">
-                                                                <img src="assets/img/testimonial/author-3_02.png"
-                                                                    alt="image not found">
+                                                                <!-- <img src="assets/img/testimonial/author-3_02.png"
+                                                                    alt="image not found"> -->
                                                                 <div class="icon">
                                                                     <img src="assets/img/icon/testi-3-icon_02.svg"
                                                                         alt="icon not found">
@@ -1112,7 +1112,7 @@
                 <p>Saturday - Thursday : 8:30 am - 10:30 pm</p>
               </div>
               <div class="cta-3__right">
-                <a href="tel:132456788"
+                <a href="tel:447405229008"
                   >Call for appointment <i class="fa-light fa-angle-right"></i
                 ></a>
               </div>
@@ -1129,13 +1129,12 @@
                 <div class="row mb-minus-50">
                   <div class="col-lg-4 col-md-6">
                     <div class="footer-section-3__widget widget-col_1 mb-50">
-                      <div class="footer-section-3__logo">
+                      <div class="footer-section-4__logo">
                         <a href="index.html">
-                          <h1>LOGO</h1>
-                          <!-- <img
-                            src="assets/img/logo/logo-white.svg"
+                          <img
+                            src="assets/img/logo/ps-logo.svg"
                             alt="logo not found"
-                        /> -->
+                        />
                         </a>
                       </div>
                       <p class="footer-section-3__dec text_white_7">
