--- a/service-details.html
+++ b/service-details.html
@@ -97,11 +97,10 @@
                 <div class="rr-header__logo">
                   <a href="index.html">
                     <div class="logo">
-                      <h1>LOGO</h1>
-                      <!-- <img
-                        src="assets/img/logo/logo-white.svg"
+                    <img
+                        src="assets/img/logo/ps-logo.svg"
                         alt="logo not found"
-                      /> -->
+                      />
                     </div>
                   </a>
                 </div>
@@ -110,7 +109,7 @@
                   <div class="main-menu">
                     <nav id="mobile-menu">
                       <ul>
-                        <li><a href="index-2.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About us</a></li>
                         <li><a href="service.html">Services</a></li>
 
@@ -532,13 +531,12 @@
                 <div class="row mb-minus-50">
                   <div class="col-lg-4 col-md-6">
                     <div class="footer-section-3__widget widget-col_1 mb-50">
-                      <div class="footer-section-3__logo">
+                      <div class="footer-section-4__logo">
                         <a href="index.html">
-                          <h1>LOGO</h1>
-                          <!-- <img
-                            src="assets/img/logo/logo-white.svg"
+                          <img
+                            src="assets/img/logo/ps-logo.svg"
                             alt="logo not found"
-                        /> -->
+                        />
                         </a>
                       </div>
                       <p class="footer-section-3__dec text_white_7">
