--- a/service.html
+++ b/service.html
@@ -97,11 +97,10 @@
                 <div class="rr-header__logo">
                   <a href="index.html">
                     <div class="logo">
-                      <h1>LOGO</h1>
-                      <!-- <img
-                        src="assets/img/logo/logo-white.svg"
+                      <img
+                        src="assets/img/logo/ps-logo.svg"
                         alt="logo not found"
-                      /> -->
+                      />
                     </div>
                   </a>
                 </div>
@@ -110,7 +109,7 @@
                   <div class="main-menu">
                     <nav id="mobile-menu">
                       <ul>
-                        <li><a href="index-2.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About us</a></li>
                         <li><a href="service.html">Services</a></li>
 
@@ -311,7 +310,7 @@
                         <div class="work-process__wrapper fade-wrapper">
                             <div class="work-process__item fade-top">
                                 <div class="work-process__bg__thumb"
-                                    data-background="assets/img/images/work-process-01.png"></div>
+                                ></div>
                                 <div class="work-process__bg__shape"></div>
                                 <div class="work-process__logo">
                                     <span>
@@ -338,7 +337,7 @@
                             </div>
                             <div class="work-process__item fade-top">
                                 <div class="work-process__bg__thumb"
-                                    data-background="assets/img/images/work-process-02.png"></div>
+                                    ></div>
                                 <div class="work-process__bg__shape"></div>
                                 <div class="work-process__logo">
                                     <span>
@@ -366,7 +365,7 @@
                             </div>
                             <div class="work-process__item fade-top">
                                 <div class="work-process__bg__thumb"
-                                    data-background="assets/img/images/work-process-03.png"></div>
+                                    ></div>
                                 <div class="work-process__bg__shape"></div>
                                 <div class="work-process__logo">
                                     <span>
@@ -383,7 +382,7 @@
                             </div>
                             <div class="work-process__item fade-top">
                                 <div class="work-process__bg__thumb"
-                                    data-background="assets/img/images/work-process-04.png"></div>
+                                    ></div>
                                 <div class="work-process__bg__shape"></div>
                                 <div class="work-process__logo">
                                     <span>
@@ -403,7 +402,7 @@
                             </div>
                             <div class="work-process__item fade-top">
                                 <div class="work-process__bg__thumb"
-                                    data-background="assets/img/images/work-process-05.png"></div>
+                                   ></div>
                                 <div class="work-process__bg__shape"></div>
                                 <div class="work-process__logo">
                                     <span>
@@ -493,7 +492,7 @@
                                         <h3 class="section__title rr-title-anim">Gain financial clarity with advanced
                                             tools</h3>
                                     </div>
-                                    <p class="annual-report-4__dec opacity_7 fade-top">Welcome to Stravise, combine
+                                    <p class="annual-report-4__dec opacity_7 fade-top">Welcome to Power Sync, combine
                                         strategic thinking
                                         with creative execution to brands grow with purpose. As a full-service
                                         marketing consultancy, we partner with uncover insights, craft compelling</p>
@@ -514,109 +513,103 @@
                 </section>
 
                 <!-- faq-section-4 -->
-                <section class="faq-section-4__area faq-section-4 section-space fix">
-                    <div class="container">
-                        <div
-                            class="section-heading__wrap_3 section-heading__wrap_4 text_center mb-70 mb-md-40 mb-sm-30 mb-xs-30">
-                            <span class="section__subtitle rr-title-anim mb-15"><img
-                                    src="assets/img/icon/section-title-4-shape_2.svg" alt="icon"> our FAQ’s <img
-                                    src="assets/img/icon/section-title-4-shape_2.svg" alt="icon"></span>
-                            <h3 class="section__title rr-title-anim">Daily performance update <br> frequency & questions
-                            </h3>
-                        </div>
+             <section class="faq-section-4__area faq-section-4 section-space fix">
+    <div class="container">
+        <div
+            class="section-heading__wrap_3 section-heading__wrap_4 text_center mb-70 mb-md-40 mb-sm-30 mb-xs-30">
+            <span class="section__subtitle rr-title-anim mb-15">
+                <img src="assets/img/icon/section-title-4-shape_2.svg" alt="icon"> Our FAQ’s 
+                <img src="assets/img/icon/section-title-4-shape_2.svg" alt="icon">
+            </span>
+            <h3 class="section__title rr-title-anim">Answers to common questions <br> about our consulting services</h3>
+        </div>
 
-                        <div class="faq-section-4__wrapper inner-faq-section">
-                            <div class="faq-section-4__faq">
-                                <div class="accordion" id="accordionExample">
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header">
-                                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                                data-bs-target="#collapseOne" aria-expanded="true"
-                                                aria-controls="collapseOne">
-                                                <span>01</span> What is the typical timelines for a session?
-                                            </button>
-                                        </h2>
-                                        <div id="collapseOne" class="accordion-collapse collapse show"
-                                            data-bs-parent="#accordionExample">
-                                            <div class="accordion-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor
-                                                    incididunt ullamco laboris nisi ut
-                                                    aliquip, Meeting project deadlines is a top priority. We Understand
-                                                    the importance
-                                                    of timely delivery and have
-                                                    established a approach.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header">
-                                            <button class="accordion-button collapsed" type="button"
-                                                data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-                                                aria-expanded="false" aria-controls="collapseTwo">
-                                                <span>02</span> How do you ensure project deadlines are met?
-                                            </button>
-                                        </h2>
-                                        <div id="collapseTwo" class="accordion-collapse collapse"
-                                            data-bs-parent="#accordionExample">
-                                            <div class="accordion-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor
-                                                    incididunt ullamco laboris nisi ut
-                                                    aliquip, Meeting project deadlines is a top priority. We Understand
-                                                    the importance
-                                                    of timely delivery and have
-                                                    established a approach.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header">
-                                            <button class="accordion-button collapsed" type="button"
-                                                data-bs-toggle="collapse" data-bs-target="#collapseThree"
-                                                aria-expanded="false" aria-controls="collapseThree">
-                                                <span>03</span> How do you handle website maintenance and updates?
-                                            </button>
-                                        </h2>
-                                        <div id="collapseThree" class="accordion-collapse collapse"
-                                            data-bs-parent="#accordionExample">
-                                            <div class="accordion-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor
-                                                    incididunt ullamco laboris nisi ut
-                                                    aliquip, Meeting project deadlines is a top priority. We Understand
-                                                    the importance
-                                                    of timely delivery and have
-                                                    established a approach.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header">
-                                            <button class="accordion-button collapsed" type="button"
-                                                data-bs-toggle="collapse" data-bs-target="#collapse4"
-                                                aria-expanded="false" aria-controls="collapse4">
-                                                <span>04</span> What strategies do you use for digital marketing?
-                                            </button>
-                                        </h2>
-                                        <div id="collapse4" class="accordion-collapse collapse"
-                                            data-bs-parent="#accordionExample">
-                                            <div class="accordion-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor
-                                                    incididunt ullamco laboris nisi ut
-                                                    aliquip, Meeting project deadlines is a top priority. We Understand
-                                                    the importance
-                                                    of timely delivery and have
-                                                    established a approach.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+        <div class="faq-section-4__wrapper inner-faq-section">
+            <div class="faq-section-4__faq">
+                <div class="accordion" id="accordionExample">
+
+                    <!-- FAQ 1 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="true"
+                                aria-controls="collapseOne">
+                                <span>01</span> What industries do you specialize in?
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>We serve a wide range of industries including energy, utilities, finance, 
+                                healthcare, and technology. Our strategies are tailored to meet the unique 
+                                needs of each sector.</p>
                             </div>
                         </div>
                     </div>
-                </section>
+
+                    <!-- FAQ 2 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                aria-expanded="false" aria-controls="collapseTwo">
+                                <span>02</span> How long does a typical consulting project take?
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>Project timelines vary depending on complexity. Short-term engagements 
+                                can take 4–6 weeks, while larger transformation projects may run 3–6 months. 
+                                We always define clear milestones and deliverables upfront.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- FAQ 3 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                aria-expanded="false" aria-controls="collapseThree">
+                                <span>03</span> Do you offer ongoing support after a project ends?
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>Yes. We provide post-engagement support, performance tracking, and 
+                                periodic reviews to ensure our solutions deliver lasting value for your 
+                                business.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- FAQ 4 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapse4"
+                                aria-expanded="false" aria-controls="collapse4">
+                                <span>04</span> How do you measure success in your consulting work?
+                            </button>
+                        </h2>
+                        <div id="collapse4" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>We measure success through tangible results—cost savings, process 
+                                improvements, revenue growth, and enhanced operational efficiency. 
+                                Every project includes defined KPIs and performance metrics.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
                 <!-- cta -->
                 <div class="cta-3__wrap">
@@ -625,7 +618,7 @@
                             <p>Saturday - Thursday : 8:30 am - 10:30 pm</p>
                         </div>
                         <div class="cta-3__right">
-                            <a href="tel:132456788">Call for appointment <i class="fa-light fa-angle-right"></i></a>
+                            <a href="tel:447405229008">Call for appointment <i class="fa-light fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -639,13 +632,12 @@
                 <div class="row mb-minus-50">
                   <div class="col-lg-4 col-md-6">
                     <div class="footer-section-3__widget widget-col_1 mb-50">
-                      <div class="footer-section-3__logo">
+                      <div class="footer-section-4__logo">
                         <a href="index.html">
-                          <h1>LOGO</h1>
-                          <!-- <img
-                            src="assets/img/logo/logo-white.svg"
+                          <img
+                            src="assets/img/logo/ps-logo.svg"
                             alt="logo not found"
-                        /> -->
+                        /> 
                         </a>
                       </div>
                       <p class="footer-section-3__dec text_white_7">
