--- a/service-details.html
+++ b/service-details.html
@@ -280,7 +280,7 @@
                                         </div>
                                         <div class="fade-top">
                                             <h3 class="service-details__subtitle">Here are some tips for choosing
-                                                Stravise</h3>
+                                                Power Sync</h3>
                                         </div>
                                         <div class="service-details__list fade-top">
                                             <ul>
@@ -330,7 +330,7 @@
                                     <div class="service-details__content-left">
                                         <h3 class="service-details__title mb-15 rr-title-anim">Key Features</h3>
                                         <div class="fade-top">
-                                            <p class="service-details__dec mb-25">At Stravise, we empower organizations
+                                            <p class="service-details__dec mb-25">At Power Sync Solution, we empower organizations
                                                 to solve complex challenges, unlock growth opportunities, and transform
                                                 strategy
                                                 into results. Our consulting services are tailored to your unique needs,
@@ -409,106 +409,102 @@
                 </div> -->
 
                 <!-- faq-section-4 -->
-                <section class="faq-section-4__area faq-section-4 section-space fix">
-                    <div class="container">
-                        <div
-                            class="section-heading__wrap_3 section-heading__wrap_4 text_center mb-90 mb-md-40 mb-sm-30 mb-xs-30">
-                            <h3 class="section__title rr-title-anim">Daily performance update <br> frequency & questions
-                            </h3>
-                        </div>
+               <section class="faq-section-4__area faq-section-4 section-space fix">
+    <div class="container">
+        <div
+            class="section-heading__wrap_3 section-heading__wrap_4 text_center mb-70 mb-md-40 mb-sm-30 mb-xs-30">
+            <span class="section__subtitle rr-title-anim mb-15">
+                <img src="assets/img/icon/section-title-4-shape_2.svg" alt="icon"> Our FAQ’s 
+                <img src="assets/img/icon/section-title-4-shape_2.svg" alt="icon">
+            </span>
+            <h3 class="section__title rr-title-anim">Answers to common questions <br> about our consulting services</h3>
+        </div>
 
-                        <div class="faq-section-4__wrapper inner-faq-section">
-                            <div class="faq-section-4__faq faq-section-4__faq_2">
-                                <div class="accordion" id="accordionExample">
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header">
-                                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                                data-bs-target="#collapseOne" aria-expanded="true"
-                                                aria-controls="collapseOne">
-                                                <span>01</span> What is the typical timelines for a session?
-                                            </button>
-                                        </h2>
-                                        <div id="collapseOne" class="accordion-collapse collapse show"
-                                            data-bs-parent="#accordionExample">
-                                            <div class="accordion-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor
-                                                    incididunt ullamco laboris nisi ut
-                                                    aliquip, Meeting project deadlines is a top priority. We Understand
-                                                    the importance
-                                                    of timely delivery and have
-                                                    established a approach.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header">
-                                            <button class="accordion-button collapsed" type="button"
-                                                data-bs-toggle="collapse" data-bs-target="#collapseTwo"
-                                                aria-expanded="false" aria-controls="collapseTwo">
-                                                <span>02</span> How do you ensure project deadlines are met?
-                                            </button>
-                                        </h2>
-                                        <div id="collapseTwo" class="accordion-collapse collapse"
-                                            data-bs-parent="#accordionExample">
-                                            <div class="accordion-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor
-                                                    incididunt ullamco laboris nisi ut
-                                                    aliquip, Meeting project deadlines is a top priority. We Understand
-                                                    the importance
-                                                    of timely delivery and have
-                                                    established a approach.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header">
-                                            <button class="accordion-button collapsed" type="button"
-                                                data-bs-toggle="collapse" data-bs-target="#collapseThree"
-                                                aria-expanded="false" aria-controls="collapseThree">
-                                                <span>03</span> How do you handle website maintenance and updates?
-                                            </button>
-                                        </h2>
-                                        <div id="collapseThree" class="accordion-collapse collapse"
-                                            data-bs-parent="#accordionExample">
-                                            <div class="accordion-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor
-                                                    incididunt ullamco laboris nisi ut
-                                                    aliquip, Meeting project deadlines is a top priority. We Understand
-                                                    the importance
-                                                    of timely delivery and have
-                                                    established a approach.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="accordion-item">
-                                        <h2 class="accordion-header">
-                                            <button class="accordion-button collapsed" type="button"
-                                                data-bs-toggle="collapse" data-bs-target="#collapse4"
-                                                aria-expanded="false" aria-controls="collapse4">
-                                                <span>04</span> What strategies do you use for digital marketing?
-                                            </button>
-                                        </h2>
-                                        <div id="collapse4" class="accordion-collapse collapse"
-                                            data-bs-parent="#accordionExample">
-                                            <div class="accordion-body">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                                    eiusmod tempor
-                                                    incididunt ullamco laboris nisi ut
-                                                    aliquip, Meeting project deadlines is a top priority. We Understand
-                                                    the importance
-                                                    of timely delivery and have
-                                                    established a approach.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+        <div class="faq-section-4__wrapper inner-faq-section">
+            <div class="faq-section-4__faq">
+                <div class="accordion" id="accordionExample">
+
+                    <!-- FAQ 1 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="true"
+                                aria-controls="collapseOne">
+                                <span>01</span> What industries do you specialize in?
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>We serve a wide range of industries including energy, utilities, finance, 
+                                healthcare, and technology. Our strategies are tailored to meet the unique 
+                                needs of each sector.</p>
                             </div>
                         </div>
                     </div>
-                </section>
+
+                    <!-- FAQ 2 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                aria-expanded="false" aria-controls="collapseTwo">
+                                <span>02</span> How long does a typical consulting project take?
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>Project timelines vary depending on complexity. Short-term engagements 
+                                can take 4–6 weeks, while larger transformation projects may run 3–6 months. 
+                                We always define clear milestones and deliverables upfront.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- FAQ 3 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                aria-expanded="false" aria-controls="collapseThree">
+                                <span>03</span> Do you offer ongoing support after a project ends?
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>Yes. We provide post-engagement support, performance tracking, and 
+                                periodic reviews to ensure our solutions deliver lasting value for your 
+                                business.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- FAQ 4 -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#collapse4"
+                                aria-expanded="false" aria-controls="collapse4">
+                                <span>04</span> How do you measure success in your consulting work?
+                            </button>
+                        </h2>
+                        <div id="collapse4" class="accordion-collapse collapse"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>We measure success through tangible results—cost savings, process 
+                                improvements, revenue growth, and enhanced operational efficiency. 
+                                Every project includes defined KPIs and performance metrics.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
                 <!-- cta -->
                 <div class="cta-3__wrap">
@@ -517,7 +513,8 @@
                             <p>Saturday - Thursday : 8:30 am - 10:30 pm</p>
                         </div>
                         <div class="cta-3__right">
-                            <a href="tel:132456788">Call for appointment <i class="fa-light fa-angle-right"></i></a>
+                            <a href="tel:447405229008">Call for appointment <i class="fa-light fa-angle-right"></i></a>
+
                         </div>
                     </div>
                 </div>
